feat(images): mise à jour de la gestion des images du produit